<resources>
    <string name="app_name">내 방 매니저</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_root_pos">우리집</string>
    <string name="my_page_pwchang">비밀번호 변경</string>
    <string name="my_page_log_out">로그아웃</string>
    <string name="my_page_del_id">계정 삭제</string>

    <string name="add_room_exp">정보</string>
    <string name="add_item_con">선택 정보 추가</string>
    <string name="item_report_title">아이템 정보 관리</string>
    <string name="name">이름</string>
    <string name="save">저장</string>
    <string name="cencle">취소</string>

    <string name="sginUp_page_title">회원가입</string>
    <string name="sginUp_go_login">로그인 페이지로 이동</string>

    <string name="sginUp_page_button">회원가입</string>

    <string name="login_page_title">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_page_button">로그인</string>
    <string name="login_page_sloginpw_text">아이디/비밀번호 찾기</string>
    <string name="login_page_google_login_Bnt">구글 로그인</string>
    <string name="login_page_sginUp_Bnt">회원가입</string>
</resources>
