<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:gravity="center"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="30"
    android:gravity="center"
    android:text="@string/item_report_title"
    android:textSize="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/add_item_roomHelp_addsetting_Recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background" />

            <LinearLayout
                android:id="@+id/add_item_roomHelp_addsetting_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_item_roomHelp_addsetting_Recycler_view">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@android:drawable/ic_menu_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="90"
                    android:gravity="center_vertical"
                    android:text="@string/add_item_con" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="10"
        android:gravity="center">

        <Button
            android:id="@+id/add_room_roomHelp_save_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/save" />

        <Button
            android:id="@+id/add_room_roomHelp_cencle_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/cencle" />
    </LinearLayout>
</LinearLayout>