<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="40">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_menu_manage"
                android:scaleType="fitCenter"
                android:background="@drawable/photo_frame"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.example.khj.kku_myhome_helper.CustomView.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_menu_camera"
                    android:id="@+id/imageView2"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </FrameLayout>

        <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:orientation="horizontal">
        <com.example.khj.kku_myhome_helper.CustomView.MyTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:text="@string/add_root_pos"
            android:textSize="17dp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@color/background_tab_pressed"/>
        </LinearLayout>
        <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="50"
            android:background="@drawable/edit_text_background"
            android:hint="@string/add_room_exp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="10"
        android:gravity="center">

        <Button
            android:id="@+id/add_room_roomHelp_save_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/add_room_roomHelp_cencle_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/cencle" />
    </LinearLayout>
</LinearLayout>