<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp">

            <com.example.khj.kku_myhome_helper.CustomView.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:src="@android:drawable/ic_menu_myplaces"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.example.khj.kku_myhome_helper.CustomView.CircleImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_menu_camera"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
            </RelativeLayout>

        </FrameLayout>

        <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="90"
                android:text="닉네임"
                android:gravity="center_vertical"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:src="@android:drawable/ic_menu_edit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:textSize="17dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="95"
                    android:text="이메일"
                    android:gravity="center_vertical"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:src="@android:drawable/ic_menu_edit"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:text="@string/my_page_pwchang" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:gravity="center">

            <Button
                android:id="@+id/add_room_roomHelp_save_Text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/add_room_roomHelp_cencle_Text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/cencle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/my_page_log_out" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_page_del_id" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>