<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/login_list_item_roomHelp_login_title_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="25"
        android:gravity="center_vertical"
        android:text="@string/sginUp_page_title"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="60"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sginUp_go_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:background="@drawable/edit_text_background"
                android:hint="아이디" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="중복체크" />
        </LinearLayout>

        <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background" />

        <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:background="@drawable/edit_text_background"
                android:hint="이메일" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text=" @ " />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="55" />

            <com.example.khj.kku_myhome_helper.CustomView.ClearEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="55"
                android:background="@drawable/edit_text_background"
                android:hint="이메일"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="15"
        android:gravity="center">

        <Button
            android:id="@+id/add_room_roomHelp_save_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/sginUp_page_button" />

        <Button
            android:id="@+id/add_room_roomHelp_cencle_Text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/cencle" />
    </LinearLayout>
</LinearLayout>